<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <!--    top section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="999dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/tv_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <!--    theme-->
    <LinearLayout
        android:id="@+id/ll_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tv_title_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_theme"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/icon_color"
            android:textSize="13sp" />

    </LinearLayout>

    <!--    language-->
    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:paddingVertical="12dp">

        <TextView
            android:id="@+id/tv_title_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_language"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/icon_color"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>