<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.MoreFunctionsFragment">

    <!--    top-->
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintWidth_percent="0.95">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="999dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_close" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_google_text" />

    </RelativeLayout>

    <!--    email info-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="4dp"
        android:foreground="?selectableItemBackground"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/rl1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:src="@drawable/logo_lazy_coder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Botir Tursunmurodov"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv2"
            app:layout_constraintStart_toEndOf="@id/iv1"
            app:layout_constraintTop_toTopOf="@id/iv1"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lycr0343@gmail.com"
            android:textColor="@color/gray_tl_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv1"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/bg_round_line"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    manage button-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="999dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_line"
            android:gravity="center"
            android:paddingHorizontal="14dp"
            android:paddingVertical="4dp"
            android:text="@string/tv_manage_google_account"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <!--    line-->
    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="28dp"
        android:alpha="0.7"
        android:background="@color/icon_color"
        app:layout_constraintTop_toBottomOf="@id/cv1" />

    <!--    buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/v1">

        <!--        manage apps-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="26dp"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="3dp"
                android:src="@drawable/ic_manage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_manage_apps_and_device"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="@color/icon_color"
                android:textSize="14sp" />

        </LinearLayout>

        <!--        library-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="26dp"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="2dp"
                android:src="@drawable/ic_library" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_library"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="@color/icon_color"
                android:textSize="14sp" />

        </LinearLayout>

        <!--        payments-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="26dp"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="2dp"
                android:src="@drawable/ic_payment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_payments_and_subscription"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="@color/icon_color"
                android:textSize="14sp" />

        </LinearLayout>

        <!--        protect-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="26dp"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="2dp"
                android:src="@drawable/ic_protect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_play_protect"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="@color/icon_color"
                android:textSize="14sp" />

        </LinearLayout>

        <!--        notifications-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="26dp"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="1dp"
                android:src="@drawable/ic_notifications" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_offers_and_notifications"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="@color/icon_color"
                android:textSize="14sp" />

        </LinearLayout>

        <!--        settings-->
        <LinearLayout
            android:id="@+id/ll_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="26dp"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="3dp"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_settings"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="@color/icon_color"
                android:textSize="14sp" />

        </LinearLayout>

        <!--        help-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="26dp"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="1dp"
                android:src="@drawable/ic_help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/tv_help_and_feedback"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:textColor="@color/icon_color"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <!--    bottom line-->
    <View
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:alpha="0.7"
        android:background="@color/icon_color"
        app:layout_constraintBottom_toTopOf="@id/tv3" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingVertical="14dp"
        android:text="@string/tv_privacy_and_terms"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/v3" />

    <!--    bottom line-->
    <View
        android:id="@+id/v3"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:alpha="0.7"
        android:background="@color/icon_color"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>